--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <style type="text/css">
 html, main {
 background: #FC01F3;
-	background: linear-gradient(105deg, black 25%, yellow 25%)
+	background: linear-gradient(105deg, black 25%, yellow 25%);
 color: #FFF;
 font-family: 'Fredoka One', sans-serif;
 }
