--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>sunday.bakeday</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Fredoka+One&family=Open+Sans&display=swap" rel="stylesheet">
+
 <style type="text/css">
 html, main {
-	background-color: #FC01F3;
+	background-color: #003adf;
 color: #FFF;
 font-family: 'Fredoka One', sans-serif;
 }
@@ -18,10 +20,29 @@ font-family: 'Fredoka One', sans-serif;
 p {
 
 }
-
-h1, .h1 {
-	font-size: 4rem;
+a {
+	color: #FFF;
+	text-decoration: underline;
+}
+a:hover {
+	text-decoration: none;
+	color: #003adf;
 	}
+h1, .h1, h2 {
+	font-size: 2rem;
+	}
+@media (min-width: 992px) { 
+	h1 {
+		font-size: 5rem;
+		}
+	h2 {
+		font-size: 3.5rem;
+	}
+	.logo {
+		width: 180px;
+		height: 180px;
+	}
+ }
 	
 .bd-placeholder-img {
 	font-size: 1.125rem;
@@ -34,12 +55,11 @@ h1, .h1 {
 
 	  
 .top {
-
-width: 100%;
-margin: auto;
-background: #FC01F3;
-padding-bottom: 20px;
-margin-bottom: 20px;
+	width: 100%;
+	margin: auto;
+	background: #FC01F3;
+	padding-bottom: 20px;
+	margin-bottom: 20px;
 }
 .bottom {
 	background-image: none;
@@ -60,11 +80,11 @@ padding-bottom: 30px;
 	}
 	.bottom {
 		background-image: linear-gradient(182deg, #fed101 20%, #FC01F3 calc(20% + 2px));
-		background-image: linear-gradient(182deg, #fed101 20%, #FC01F3 calc(20% + 2px));
+		background-image: linear-gradient(182deg, #fed101 20%, #003adf calc(20% + 2px));
 	}
 @media (max-width: 991.98px) { 
 	.bottom {
-		background-image: linear-gradient(182deg, #fed101 10%, #FC01F3 calc(10% + 2px));
+		background-image: linear-gradient(182deg, #fed101 10%, #003adf calc(10% + 2px));
 	}
 }
 	h2.thisweeksmenu {
@@ -74,7 +94,8 @@ padding-bottom: 30px;
 	}
 
 .card-body {
-background-color: #FFF;
+background-color: #FC01F3;
+border-radius: 0;
 }
 .album {
 
@@ -83,15 +104,15 @@ background: #fed101;
 
 
 .card-body h2 {
-	font-size: 1.5rem;
-	color: #FC01F3;
+	font-size: 1.2rem;
+	color: #fff;
 }
 .card-text {
-	color: #FC01F3;
+	color: #fff;
 	font-family: 'Open Sans', sans-serif;
 	}
 .howitworks {
-font-size: 1.5rem;
+font-size: 1.2rem;
 
 }
 
@@ -100,18 +121,14 @@ font-size: 1.5rem;
 .howitworks h2.display-4 {
 color: #fed101;
 }
-h1.display-2 {
-	font-size: 3rem;
-}
-@media (min-width: 768px) { 
-	h1.display-2 {
-		font-size: 5rem;
-	}
-}
+
+
 .card {
 	margin-bottom: 1rem;
-	min-height: 470px;
-	}
+	min-height: 455px;
+	border: none;
+    border-radius: 0;
+}
 h2 {
 color: #fed101;
 }
@@ -127,7 +144,7 @@ ol span {
 	color: #FFF;
 	}
 .lead {
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 	}
 .yellowline {
 	background: #fed101;
@@ -135,20 +152,21 @@ ol span {
 	border-radius: 3px;
 }
 .pill {
-padding: 10px 0;
-color: #fff;
-font-family: 'Open Sans', sans-serif;
-border: 5px solid #FFF;
-border-radius: 40px;
+	font-size: 14px;
+	padding: 5px 0;
+	color: #fff;
+	font-family: 'Open Sans', sans-serif;
+	border: 3px solid #FFF;
+	border-radius: 40px;
 }
 .faqs p{
-font-size: 1.5rem;
+font-size: 1.2rem;
 }
 .answer {
 font-family: 'Open Sans', sans-serif;
 }
 .pillTitle {
-font-size: 1.2rem;
+font-size: 1rem;
 font-family: 'Fredoka One', sans-serif;
 }
 
@@ -163,20 +181,20 @@ font-family: 'Fredoka One', sans-serif;
 <main>
 	<div class="top text-center">
 		<div class="px-4 pt-4">
-			<img class="d-block mx-auto mb-3" src="https://gist.githubusercontent.com/sunday-bakeday/97e4115b5e3d76f1e0feb32f29a1b5c6/raw/6346c00dac4e53267e79a8099e4955bf5c2aa8b7/logo.svg" alt="" width="180" height="180">
-			<h1 class="display-2">@sunday.bakeday</h1>
-			<div class="col-lg-8 mx-auto">
+			<img class="logo d-block mx-auto mb-3" src="https://gist.githubusercontent.com/sunday-bakeday/97e4115b5e3d76f1e0feb32f29a1b5c6/raw/6346c00dac4e53267e79a8099e4955bf5c2aa8b7/logo.svg" alt="" width="150" height="150">
+			<h1>@sunday.bakeday</h1>
+			<div class="col-lg-6 mx-auto">
 				<p class="lead mb-2">Fresh-baked pastries delivered on Sunday morning.<br>Mix and match 4 for $20. Grand Rapids, MI.</p>
 			</div>
 		</div>
 	</div>
 	<div class="album pb-3 text-center">
-		<h2 class="display-4 thisweeksmenu">this week's menu</h2>
+		<h2 class="thisweeksmenu">this week's menu</h2>
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-12 col-md-6 col-lg-3">
+				<div class="col-12 col-md-12 col-lg-3">
 					<div class="card">
-						<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+						<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#fff"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Image FPO</text></svg>
 						<div class="card-body">
 							<h2>Croissant</h2>
 							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -184,9 +202,9 @@ font-family: 'Fredoka One', sans-serif;
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-md-6 col-lg-3">
+				<div class="col-12 col-md-12 col-lg-3">
 					<div class="card">
-						<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+						<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#fff"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Image FPO</text></svg>
 						<div class="card-body">
 							<h2>Pain au chocolat</h2>
 							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -194,9 +212,9 @@ font-family: 'Fredoka One', sans-serif;
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-md-6 col-lg-3">
+				<div class="col-12 col-md-12 col-lg-3">
 					<div class="card">
-						<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+						<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#fff"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Image FPO</text></svg>
 						<div class="card-body">
 							<h2>Blueberry scone</h2>
 							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -204,9 +222,9 @@ font-family: 'Fredoka One', sans-serif;
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-md-6 col-lg-3">
+				<div class="col-12 col-md-12 col-lg-3">
 					<div class="card">
-						<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+						<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#fff"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Image FPO</text></svg>
 						<div class="card-body">
 							<h2>Jalapeno cheddar scone</h2>
 							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -219,7 +237,7 @@ font-family: 'Fredoka One', sans-serif;
 	</div>
 	<div class="bottom pt-5">
 		<div class="py-4 col-md-7 mx-auto text-center">
-			<h2 class="display-4">how it works</h2>
+			<h2 class="">how it works</h2>
 			<ol class="mb-0 howitworks text-center">
 				<li><span>Pick any combination of 4 pastries from the options above.</span></li>
 				<li><span>Send me $20 and let me know what you want in your box and the delivery address.</span></li>
@@ -227,37 +245,44 @@ font-family: 'Fredoka One', sans-serif;
 			</ol>
 		</div>
 	</div>
-	<div class="yellowline col-md-3 mx-auto"></div>
-	<div class="">
+	<div class="yellowline col-2 mx-auto"></div>
+	<div class="pb-3">
 		<div class="py-4 col-md-7 mx-auto text-center">
-			<h2 class="display-4">order now</h2>
-			<p class="pb-3 howitworks text-center">Orders received before Friday at noon will be delivered on Sunday.</p>
+			<h2 class="">order now</h2>
+			<p class="pb-2 howitworks text-center">Order by Friday at noon for delivery on Sunday.</p>
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12 col-md-6 col-lg-3 mb-2">
+					<div class="col-xs-12 col-md-6 col-lg-4 mb-2">
 						<div class="pill"><p class="pillTitle mb-0">Venmo</p>@richard.crawford-24</div>
 					</div>
-					<div class="col-xs-12 col-md-6 col-lg-3 mb-2">
+					<div class="col-xs-12 col-md-6 col-lg-4 mb-2">
 						<div class="pill"><p class="pillTitle mb-0">CashApp</p>$richardcrawford24</div>
 					</div>
-					<div class="col-xs-12 col-md-6 col-lg-3 mb-2">
+					<div class="col-xs-12 col-md-6 col-lg-4 mb-2">
 						<div class="pill"><p class="pillTitle mb-0">Messenger</p>@richardcrawford24</div>
 					</div>
-					<div class="col-xs-12 col-md-6 col-lg-3 mb-2">
-						<div class="pill"><p class="pillTitle mb-0">Cash</p>Message me!</div>
-					</div>
 				</div>
+				<p class="mb-0 pt-3">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">email me</a> and we'll figure it out.</p>
 			</div>
 		</div>
 	</div>
-	<div class="yellowline col-md-3 mx-auto"></div>
+	<div class="yellowline col-2 mx-auto"></div>
+	<div class="">
+		<div class="py-4 col-md-7 mx-auto text-center">
+			<h2 class="">faqs</h2>
+			<div class="mb-0 faqs text-center">
+				<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. As long as you live within about 20 minutes of downtown we're cool.</div>
+				<div class="mb-3"><p class="mb-1">My nephew is graduating from Harvard - will you bake a load of stuff for the party?</p><span class="answer">Probably, if I have time! <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">Email me!</a></div>
+				<div class="mb-3"><p class="mb-1">Can I order something that isn't on the menu?</p><span class="answer">No, but you can <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">email me</a> with requests for next week!</div>
+			</div>
+		</div>
+	</div>
+	<div class="yellowline col-2 mx-auto"></div>
 	<div class="pb-5">
 		<div class="py-4 col-md-7 mx-auto text-center">
-			<h2 class="display-4">faqs</h2>
+			<h2 class="">contact</h2>
 			<div class="mb-0 faqs text-center">
-				<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you still deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. As long as you live within about 20 minutes of downtown we're cool.</div>
-				<div class="mb-3"><p class="mb-1">Can I order something that isn't on the menu?</p><span class="answer">No, but you can email me with requests for next week!</div>
-				<div class="mb-3"><p class="mb-1">My nephew is graduating from Harvard - will you bake a load of stuff for the party?</p><span class="answer">If I can be bothered! Email me!</div>
+				<div class="mb-3"><p class="mb-1">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">email me</a>. Thanks for looking at my weird page!</p></div>
 			</div>
 		</div>
 	</div>
