--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@ a:hover {
 	text-decoration: none;
 	color: #003adf;
 	}
+.pill a:hover {
+	color: #fff;
+	}
 h1, .h1, h2 {
 	font-size: 2rem;
 	}
@@ -253,13 +256,13 @@ font-family: 'Fredoka One', sans-serif;
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 col-md-6 col-lg-4 mb-2">
-						<div class="pill"><p class="pillTitle mb-0">Venmo</p>@richard.crawford-24</div>
+						<div class="pill"><p class="pillTitle mb-0"><a href="https://venmo.com/richard-crawford-24">Venmo</a></p>@richard.crawford-24</div>
 					</div>
 					<div class="col-xs-12 col-md-6 col-lg-4 mb-2">
-						<div class="pill"><p class="pillTitle mb-0">CashApp</p>$richardcrawford24</div>
+						<div class="pill"><p class="pillTitle mb-0"><a href="https://cash.app/richardcrawford24">CashApp</a></p>$richardcrawford24</div>
 					</div>
 					<div class="col-xs-12 col-md-6 col-lg-4 mb-2">
-						<div class="pill"><p class="pillTitle mb-0">Messenger</p>@richardcrawford24</div>
+						<div class="pill"><p class="pillTitle mb-0"><a href="http://m.me/richardcrawford24">Messenger</a></p>@richardcrawford24</div>
 					</div>
 				</div>
 				<p class="mb-0 pt-3">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">email me</a> and we'll figure it out.</p>
