--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@ h1, .h1, h2 {
 	padding-bottom: 20px;
 	margin-bottom: 20px;
 }
+/*
 .bottom {
 	background-image: none;
 	background: #FC01F3;
-}
+}*/
 h2.thisweeksmenu {
 color: #FC01F3;
 padding-bottom: 30px;
@@ -81,10 +82,12 @@ padding-bottom: 30px;
 		padding-bottom: 82px;
 		margin-bottom: 0;
 	}
+/*
 	.bottom {
 		background-image: linear-gradient(182deg, #fed101 20%, #FC01F3 calc(20% + 2px));
 		background-image: linear-gradient(182deg, #fed101 20%, #6a4a4a calc(20% + 2px));
 	}
+*/
 	
 .card-body h2 {
 	font-size: 1rem;
@@ -190,7 +193,11 @@ font-family: 'Open Sans', sans-serif;
 font-size: 1rem;
 font-family: 'Fredoka One', sans-serif;
 }
-
+.bottomWrapper {
+background: URL('https://i.imgur.com/v1LWpMi.jpg');
+background-size: cover;
+text-shadow: 0 0 2px #000;
+}
 
 
 </style>
@@ -256,6 +263,7 @@ font-family: 'Fredoka One', sans-serif;
 			</div>
 		</div>
 	</div>
+	<div class="bottomWrapper">
 	<div class="bottom pt-5">
 		<div class="py-4 col-md-8 mx-auto text-center">
 			<h2 class="">how it works</h2>
@@ -304,9 +312,10 @@ font-family: 'Fredoka One', sans-serif;
 		<div class="py-4 col-md-7 mx-auto text-center">
 			<h2 class="">contact</h2>
 			<div class="mb-0 faqs text-center">
-				<div class="mb-3"><p class="mb-1">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">email me</a>. Thanks for looking at my weird page!</p></div>
+				<div class="mb-3"><p class="mb-1">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">email me</a>.<br>Thanks for looking at my weird page!</p></div>
 			</div>
 		</div>
+	</div>
 	</div>
 </main>
 <footer class="footer"></footer>
