--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ font-size: 1rem;
 font-family: 'Fredoka One', sans-serif;
 }
 .bottomWrapper {
-background: URL('https://i.imgur.com/v1LWpMi.jpg');
+background: URL('https://i.imgur.com/BtDWgyy.jpg');
 background-size: cover;
 text-shadow: 0 0 2px #000;
 }
