--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ padding-bottom: 30px;
 		font-size: 1.2rem;
 	}
 	.bottom {
-		background-image: linear-gradient(182deg, #fed101 10%, #6a4a4a calc(10% + 2px));
+		/*background-image: linear-gradient(182deg, #fed101 10%, #6a4a4a calc(10% + 2px));*/
 	}
 	.card-body h2 {
 	font-size: 1.8rem;
