--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ text-shadow: 0 0 2px #000;
 			<h2 class="">how it works</h2>
 			<ol class="mb-0 howitworks text-center">
 				<li class="py-2"><span>Pick any combination of 4 pastries from the options above.</span></li>
-				<li class="notewrapper"><span>Send me $20 and let me know what you want in your box and the delivery address.</span>
+				<li class="notewrapper"><span>Send me $20 and let me know what you want in your box and where to deliver it.</span>
 				<span class="note py-2">Include your order and address in the message with your payment!</span></li>
 				<li class="py-2"><span>I'll deliver a box of pastries on Sunday morning before 10am.</span></li>
 			</ol>
