--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <style type="text/css">
 html, main {
+	line-height: 1.3;
 	background-color: #6a4a4a;
 color: #FFF;
 font-family: 'Fredoka One', sans-serif;
@@ -28,10 +29,16 @@ a:hover {
 	text-decoration: none;
 	color: #003adf;
 	}
+h1 a {
+	text-decoration: none;
+	}
 .pill a:hover {
 	color: #fff;
 	}
-h1, .h1, h2 {
+h1, .h1, {
+	font-size: 2.4rem;
+	}
+h2 {
 	font-size: 2rem;
 	}
 @media (min-width: 992px) { 
@@ -104,10 +111,10 @@ padding-bottom: 30px;
 		font-size: 1.2rem;
 	}
 	.bottom {
-		/*background-image: linear-gradient(182deg, #fed101 10%, #6a4a4a calc(10% + 2px));*/
+		background-image: linear-gradient(182deg, #fed101 10%, #5a3791 calc(10% + 2px));
 	}
 	.card-body h2 {
-	font-size: 1.8rem;
+	font-size: 1.4rem;
 	}
 }
 	h2.thisweeksmenu {
@@ -129,7 +136,7 @@ background: #fed101;
 
 
 .howitworks {
-font-size: 1.5rem;
+font-size: 1.2rem;
 
 }
 
@@ -140,7 +147,7 @@ color: #fed101;
 
 .card {
 	margin-bottom: 1rem;
-	min-height: 385px;
+	min-height: 372px;
 	border: none;
     border-radius: 0;
 }
@@ -161,6 +168,7 @@ ol span {
 	}
 .lead {
 	font-size: 1.2rem;
+
 	}
 .yellowline {
 	background: #fed101;
@@ -175,18 +183,22 @@ ol span {
 	border: 3px solid #FFF;
 	border-radius: 40px;
 }
-.faqs p{
+.faqs p, .contact p {
 font-size: 1.2rem;
+color: #fff;
+}
+.faqs p {
+color: #fed101;
 }
 .answer, .note {
 font-family: 'Open Sans', sans-serif;
 }
 .notewrapper {
-	line-height: 1;
+
 	}
 .note {
+	display: block;
 	font-size: 1rem;
-	color: #e8e2d8;
 	font-style: italic;
 	}
 .pillTitle {
@@ -194,9 +206,10 @@ font-size: 1rem;
 font-family: 'Fredoka One', sans-serif;
 }
 .bottomWrapper {
-background: URL('https://i.imgur.com/BtDWgyy.jpg');
+/*background: URL('https://i.imgur.com/BtDWgyy.jpg');
 background-size: cover;
-text-shadow: 0 0 2px #000;
+text-shadow: 0 0 2px #a4009e;*/
+background-image: linear-gradient(182deg, #fed101 4%, #5a3791 calc(4% + 2px));
 }
 
 
@@ -208,11 +221,11 @@ text-shadow: 0 0 2px #000;
 </body>
 <main>
 	<div class="top text-center">
-		<div class="px-4 pt-4">
-			<img class="logo d-block mx-auto mb-3" src="https://gist.githubusercontent.com/sunday-bakeday/97e4115b5e3d76f1e0feb32f29a1b5c6/raw/6346c00dac4e53267e79a8099e4955bf5c2aa8b7/logo.svg" alt="" width="150" height="150">
-			<h1>@sunday.bakeday</h1>
+		<div class="px-2 pt-4">
+			<a href="https://www.instagram.com/sunday.bakeday/"><img class="logo d-block mx-auto mb-3" src="https://gist.githubusercontent.com/sunday-bakeday/97e4115b5e3d76f1e0feb32f29a1b5c6/raw/6346c00dac4e53267e79a8099e4955bf5c2aa8b7/logo.svg" alt="Sunday Bakeday logo" width="150" height="150"></a>
+			<h1><a href="https://www.instagram.com/sunday.bakeday/">@sunday.bakeday</a></h1>
 			<div class="col-lg-6 mx-auto">
-				<p class="lead mb-2">Fresh-baked pastries delivered on Sunday morning.<br>Mix and match 4 for $20. Grand Rapids, MI.</p>
+				<p class="lead mb-2">Fresh-baked pastries delivered on Sunday morning. Mix and match 4 for $20. <br>Grand Rapids, MI.</p>
 			</div>
 		</div>
 	</div>
@@ -269,9 +282,9 @@ text-shadow: 0 0 2px #000;
 			<h2 class="">how it works</h2>
 			<ol class="mb-0 howitworks text-center">
 				<li class="py-2"><span>Pick any combination of 4 pastries from the options above.</span></li>
-				<li class="notewrapper"><span>Send me $20 and let me know what you want in your box and where to deliver it.</span>
-				<span class="note py-2">Include your order and address in the message with your payment!</span></li>
-				<li class="py-2"><span>I'll deliver a box of pastries on Sunday morning before 10am.</span></li>
+				<li class="py-2 notewrapper"><span>Send me $20 and let me know what you want and the delivery address.</span>
+				<span class="note pt-2">Include your order and address in the message with your payment!</span></li>
+				<li class="py-2"><span>A box of pastries will be delivered to you on Sunday morning before 10am.</span></li>
 			</ol>
 		</div>
 	</div>
@@ -311,12 +324,18 @@ text-shadow: 0 0 2px #000;
 	<div class="pb-5">
 		<div class="py-4 col-md-7 mx-auto text-center">
 			<h2 class="">contact</h2>
-			<div class="mb-0 faqs text-center">
-				<div class="mb-3"><p class="mb-1">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">email me</a>.<br>Thanks for looking at my weird page!</p></div>
+			<div class="mb-0 contact text-center">
+				<div class=""><p class="mb-3">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">email me</a>.</p>
+				<p class="mb-5">Thanks for looking at my weird page!</p>
+				<a href="https://www.instagram.com/sunday.bakeday/"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="36"></a>
+					
+					</div>
 			</div>
 		</div>
 	</div>
+
 	</div>
 </main>
+
 <footer class="footer"></footer>
 </html>
