--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<style type="text/css">
 		html, body {
 			line-height: 1.3;
-			background-color: #6a4a4a;
+			background-color: #fed101;
 			color: #FFF;
 			font-family: 'Fredoka One', sans-serif;
 			}
@@ -30,7 +30,7 @@
 		.pill a:hover {
 			color: #fff;
 			}
-		h1, .h1 {
+		h1 {
 			font-size: 2.4rem;
 			}
 		h2 {
@@ -66,7 +66,8 @@
 
 		h2.thisweeksmenu {
 			color: #FC01F3;
-			padding-bottom: 30px;
+			position: relative;
+			top: -15px;
 			}
 
 		.bd-placeholder-img-lg {
@@ -74,7 +75,7 @@
 			}
 		.top {
 			background-image: linear-gradient(178deg, #FC01F3 85%, #fed101 calc(85% + 2px));
-			padding-bottom: 82px;
+			padding-bottom: 75px;
 			margin-bottom: 0;
 			}
 		.card-body h2 {
@@ -98,24 +99,15 @@
 				font-size: 1.4rem;
 				}
 			}
-		h2.thisweeksmenu {
-			position: relative;
-			top: -20px;
-			padding-bottom: 0;
-			}
+
 
 		.card-body {
 			background-color: #FC01F3;
 			border-radius: 0;
 			}
-		.album {
-			background: #fed101;
-			}
+
 		.howitworks {
 			font-size: 1.2rem;
-			}
-		.howitworks h2.display-4 {
-			color: #fed101;
 			}
 		.card {
 			margin-bottom: 1rem;
