--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			color: #FFF;
 			}
 		.lead {
-			font-size: 1.1rem;
+			font-size: 1.2rem;
 			}
 		.yellowline {
 			background: #fed101;
@@ -200,7 +200,7 @@
 							<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#fff"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Image FPO</text></svg>
 							<div class="card-body">
 								<h2>Pain au chocolat</h2>
-								<p class="card-text">What's better than a croissant? A croissant with chocolate wrapped inside it!</p>
+								<p class="card-text">What's better than a croissant? A croissant with chocolate inside it!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
 						</div>
@@ -233,8 +233,8 @@
 			<div class="py-4 col-md-12 mx-auto text-center">
 				<h2 class="">how it works</h2>
 				<ol class="mb-0 howitworks text-center">
-					<li class="py-2"><span>Pick any combination of 4 pastries from the options above.</span></li>
-					<li class="py-2 notewrapper"><span>Send me $20 and let me know what you want and the delivery address.</span><span class="note pt-2">Include your order and address in the message with your payment!</span></li>
+					<li class="py-2"><span>Pick any combination of 4 pastries.</span></li>
+					<li class="py-2 notewrapper"><span>Send me $20.</span><span class="note pt-2">Include your order and address in the message with your payment!</span></li>
 					<li class="py-2"><span>A box of pastries will be delivered to you on Sunday morning before 10am.</span></li>
 				</ol>
 			</div>
@@ -243,7 +243,7 @@
 		<div class="pb-3">
 			<div class="py-4 col-md-12 col-lg-8 mx-auto text-center">
 				<h2 class="">order now</h2>
-				<p class="pb-2 howitworks text-center">Order by Friday at noon for delivery on Sunday.</p>
+				<p class="pb-2 howitworks text-center">Order by noon on Friday for delivery on Sunday.</p>
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12 col-md-4 col-lg-4 mb-2">
@@ -277,8 +277,7 @@
 				<h2 class="">contact</h2>
 				<div class="mb-0 contact text-center">
 					<div class="">
-						<p class="mb-3">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">email me</a>.</p>
-						<p class="mb-5">Thanks for looking at my weird page!</p>
+						<p class="mb-5">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">email me</a>.</p>
 						<a href="https://www.instagram.com/sunday.bakeday/"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="36"></a>	
 					</div>
 				</div>
