--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Fredoka+One&family=Open+Sans&display=swap" rel="stylesheet">
-		<style type="text/css">
+		<style>
 		html, body {
 			line-height: 1.3;
 			background-color: #fed101;
@@ -256,7 +256,7 @@
 							<div class="pill"><p class="pillTitle mb-0"><a href="http://m.me/richardcrawford24">Messenger</a></p>@richardcrawford24</div>
 						</div>
 					</div>
-					<p class="mb-0 pt-3">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">email me</a> and we'll figure it out.</p>
+					<p class="mb-0 pt-3">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a> and we'll figure it out.</p>
 				</div>
 			</div>
 		</div>
@@ -265,9 +265,9 @@
 			<div class="py-4 col-md-12 mx-auto text-center">
 				<h2 class="">faqs</h2>
 				<div class="mb-0 faqs text-center">
-					<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. As long as you live within about 20 minutes of downtown we're cool.</div>
-					<div class="mb-3"><p class="mb-1">My nephew is graduating from Harvard - will you bake a load of stuff for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">Email me!</a></div>
-					<div class="mb-3"><p class="mb-1">Can I order something that isn't on the menu?</p><span class="answer">No, but you can <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">email me</a> with requests for next week!</div>
+					<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. As long as you live within about 20 minutes of downtown we're cool.</span></div>
+					<div class="mb-3"><p class="mb-1">My nephew is graduating from Harvard - will you bake a load of stuff for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">Email me!</a></span></div>
+					<div class="mb-3"><p class="mb-1">Can I order something that isn't on the menu?</p><span class="answer">No, but you can <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a> with requests for next week!</span></div>
 				</div>
 			</div>
 		</div>
@@ -277,7 +277,7 @@
 				<h2 class="">contact</h2>
 				<div class="mb-0 contact text-center">
 					<div class="">
-						<p class="mb-5">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">email me</a>.</p>
+						<p class="mb-5">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a>.</p>
 						<a href="https://www.instagram.com/sunday.bakeday/"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="36"></a>	
 					</div>
 				</div>
