--- a/index.html
+++ b/index.html
@@ -229,56 +229,57 @@
 			</div>
 		</div>
 		<div class="bottomWrapper">
-		<div class="bottom pt-5">
-			<div class="py-4 col-md-12 mx-auto text-center">
-				<h2 class="">how it works</h2>
-				<ol class="mb-0 howitworks text-center">
-					<li class="py-2"><span>Pick any combination of 4 pastries.</span></li>
-					<li class="py-2 notewrapper"><span>Send me $20.</span><span class="note pt-2">Include your order and address in the message with your payment!</span></li>
-					<li class="py-2"><span>A box of pastries will be delivered to you on Sunday morning before 10am.</span></li>
-				</ol>
+			<div class="bottom pt-5">
+				<div class="py-4 col-md-12 mx-auto text-center">
+					<h2 class="">how it works</h2>
+					<ol class="mb-0 howitworks text-center">
+						<li class="py-2"><span>Pick any combination of 4 pastries.</span></li>
+						<li class="py-2 notewrapper"><span>Send me $20.</span><span class="note pt-2">Include your order and address in the message with your payment!</span></li>
+						<li class="py-2"><span>A box of pastries will be delivered to you on Sunday morning before 10am.</span></li>
+					</ol>
+				</div>
 			</div>
-		</div>
-		<div class="yellowline col-2 mx-auto"></div>
-		<div class="pb-3">
-			<div class="py-4 col-md-12 col-lg-8 mx-auto text-center">
-				<h2 class="">order now</h2>
-				<p class="pb-2 howitworks text-center">Order by noon on Friday for delivery on Sunday.</p>
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-12 col-md-4 col-lg-4 mb-2">
-							<div class="pill"><p class="pillTitle mb-0"><a href="https://venmo.com/richard-crawford-24">Venmo</a></p>@richard.crawford-24</div>
+			<div class="yellowline col-2 mx-auto"></div>
+			<div class="pb-3">
+				<div class="py-4 col-md-12 col-lg-8 mx-auto text-center">
+					<h2 class="">order now</h2>
+					<p class="pb-2 howitworks text-center">Order by noon on Friday for delivery on Sunday.</p>
+					<div class="container">
+						<div class="row">
+							<div class="col-xs-12 col-md-4 col-lg-4 mb-2">
+								<div class="pill"><p class="pillTitle mb-0"><a href="https://venmo.com/richard-crawford-24">Venmo</a></p>@richard.crawford-24</div>
+							</div>
+							<div class="col-xs-12 col-md-4 col-lg-4 mb-2">
+								<div class="pill"><p class="pillTitle mb-0"><a href="https://cash.app/richardcrawford24">CashApp</a></p>$richardcrawford24</div>
+							</div>
+							<div class="col-xs-12 col-md-4 col-lg-4 mb-2">
+								<div class="pill"><p class="pillTitle mb-0"><a href="http://m.me/richardcrawford24">Messenger</a></p>@richardcrawford24</div>
+							</div>
 						</div>
-						<div class="col-xs-12 col-md-4 col-lg-4 mb-2">
-							<div class="pill"><p class="pillTitle mb-0"><a href="https://cash.app/richardcrawford24">CashApp</a></p>$richardcrawford24</div>
-						</div>
-						<div class="col-xs-12 col-md-4 col-lg-4 mb-2">
-							<div class="pill"><p class="pillTitle mb-0"><a href="http://m.me/richardcrawford24">Messenger</a></p>@richardcrawford24</div>
-						</div>
+						<p class="mb-0 pt-3">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a> and we'll figure it out.</p>
 					</div>
-					<p class="mb-0 pt-3">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a> and we'll figure it out.</p>
 				</div>
 			</div>
-		</div>
-		<div class="yellowline col-2 mx-auto"></div>
-		<div class="">
-			<div class="py-4 col-md-12 mx-auto text-center">
-				<h2 class="">faqs</h2>
-				<div class="mb-0 faqs text-center">
-					<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. As long as you live within about 20 minutes of downtown we're cool.</span></div>
-					<div class="mb-3"><p class="mb-1">My nephew is graduating from Harvard - will you bake a load of stuff for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:sunday.bakeday.69@gmail.com?subject=I want to give you a lot of money">Email me!</a></span></div>
-					<div class="mb-3"><p class="mb-1">Can I order something that isn't on the menu?</p><span class="answer">No, but you can <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a> with requests for next week!</span></div>
+			<div class="yellowline col-2 mx-auto"></div>
+			<div class="">
+				<div class="py-4 col-md-12 mx-auto text-center">
+					<h2 class="">faqs</h2>
+					<div class="mb-0 faqs text-center">
+						<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. As long as you live within about 20 minutes of downtown we're cool.</span></div>
+						<div class="mb-3"><p class="mb-1">My nephew is graduating from Harvard - will you bake a load of stuff for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">Email me!</a></span></div>
+						<div class="mb-3"><p class="mb-1">Can I order something that isn't on the menu?</p><span class="answer">No, but you can <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a> with requests for next week!</span></div>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="yellowline col-2 mx-auto"></div>
-		<div class="pb-5">
-			<div class="py-4 col-md-7 mx-auto text-center">
-				<h2 class="">contact</h2>
-				<div class="mb-0 contact text-center">
-					<div class="">
-						<p class="mb-5">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a>.</p>
-						<a href="https://www.instagram.com/sunday.bakeday/"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="36"></a>	
+			<div class="yellowline col-2 mx-auto"></div>
+			<div class="pb-5">
+				<div class="py-4 col-md-7 mx-auto text-center">
+					<h2 class="">contact</h2>
+					<div class="mb-0 contact text-center">
+						<div class="">
+							<p class="mb-5">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a>.</p>
+							<a href="https://www.instagram.com/sunday.bakeday/"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="36"></a>	
+						</div>
 					</div>
 				</div>
 			</div>
